[tool.poetry]
name = "wireshark"
version = "0.1.0"
description = ""
authors = ["NoahCardoza <noahcardoza@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
networkx = "^3.2.1"
graphviz = "^0.20.1"
matplotlib = "^3.8.3"
schemdraw = "^0.18"
requests = "^2.31.0"
pylatex = "^1.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
